--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.3"
+    "@types/jest": "^26.0.23",
+    "jest": "^26.x"
   },
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll"
